- New feature: Support for Java 11
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]
