@@ -46,6 +46,10 @@
             <groupId>pt.ist</groupId>
             <artifactId>standards</artifactId>
         </dependency>
+        <dependency>
+				<groupId>org.fenixedu</groupId>
+	<artifactId>fenixedu-academic-extensions</artifactId>
+		</dependency>
     </dependencies>
 
     <pluginRepositories>
